--- a/README.org
+++ b/README.org
@@ -217,3 +217,57 @@ fn main() {
     }
 }
 #+end_src
+** Ownership
+It enables Rust to make memory safety guarantees without needing a garbage collector.
+Ownership is a set of rules that govern how a Rust program manages memory.
+Memory is managed through a system of ownership with a set of rules that the compiler checks. If any of the rules are violated, the program won’t compile.
+Keeping track of what parts of code are using what data on the heap, minimizing the amount of duplicate data on the heap, and cleaning up unused data on the heap so you don’t run out of space are all problems that ownership addresses.
+*** Ownership Rules
+1. Each value in Rust has an owner.
+2. There can only be one owner at a time.
+3. When the owner goes out of scope, the value will be `drop`ped.
+**** Double free error
+To ensure memory safety, after the line let s2 = s1;, Rust considers s1 as no longer valid. Therefore, Rust doesn’t need to free anything when s1 goes out of scope.
+#+begin_src rust
+let s1 = String::from("hello");
+let s2 = s1;
+
+println!("{}, world!", s1);
+#+end_src
+If you’ve heard the terms shallow copy and deep copy while working with other languages, the concept of copying the pointer, length, and capacity without copying the data probably sounds like making a shallow copy.
+But because Rust also invalidates the first variable, instead of being called a shallow copy, it’s known as a `move`.
+Rust will never automatically create “deep” copies of your data.
+Therefore, any automatic copying can be assumed to be inexpensive in terms of runtime performance.
+**** Variables and Data Interacting with Clone
+If we do want to deeply copy the heap data of the String, not just the stack data, we can use a common method called clone
+#+begin_src rust
+let s1 = String::from("hello");
+let s2 = s1.clone();
+println!("s1 = {}, s2 = {}", s1, s2);
+#+end_src
+**** Stack-Only Data: `Copy`
+#+begin_src rust
+let x = 5;
+let y = x;
+println!("x = {}, y = {}", x, y);
+#+end_src
+Types such as integers have a known size at compile time and are stored entirely 
+on the stack, so copies of the actual values are quick to make. 
+That means there’s no reason we would want to prevent x from being valid after 
+we create the variable y. 
+In other words, there’s no difference between deep and shallow copying here,
+so calling clone wouldn’t do anything different from the usual shallow copying, 
+and we can leave it out.
+
+Rust has a special annotation called the `Copy` trait that we can place on types 
+that are stored on the stack, as integers are. 
+If a type implements the Copy trait, variables that use it do not move, but rather
+are trivially copied, making them still valid after assignment to another variable.
+
+Rust won’t let us annotate a type with Copy if the type, or any of its parts, has
+implemented the Drop trait. If the type needs something special to happen when the
+value goes out of scope and we add the Copy annotation to that type, we’ll get a
+compile-time error.
+
+Tuples, if they only contain types that also implement Copy. For example, (i32, i32)
+implements Copy, but (i32, String) does not.
