--- a/README.org
+++ b/README.org
@@ -271,3 +271,73 @@ compile-time error.
 
 Tuples, if they only contain types that also implement Copy. For example, (i32, i32)
 implements Copy, but (i32, String) does not.
+**** Owernship and Functions
+The mechanics of passing a value to a function are similar to those when assigning a value to a variable. Passing a variable to a function will move or copy, just as assignment does.
+**** Return Values and Scope
+The ownership of a variable follows the same pattern every time: assigning a value to another variable moves it. When a variable that includes data on the heap goes out of scope, the value will be cleaned up by drop unless ownership of the data has been moved to another variable.
+**** References and Borrowing
+A reference is like a pointer in that it’s an address we can follow to access the data stored at that address; that data is owned by some other variable. Unlike a pointer, a reference is guaranteed to point to a valid value of a particular type for the life of that reference.
+These ampersands represent references, and they allow you to refer to some value without taking ownership of it.
+#+begin_src rust
+fn main() {
+    let s1 = String::from("hello");
+
+    let len = calculate_length(&s1);
+
+    println!("The length of '{}' is {}.", s1, len);
+}
+
+fn calculate_length(s: &String) -> usize { // s is a reference to a String
+    s.len()
+} // Here, s goes out of scope. But because it does not have ownership of what
+  // it refers to, it is not dropped.
+#+end_src
+The &s1 syntax lets us create a reference that refers to the value of s1 but does not own it. Because it does not own it, the value it points to will not be dropped when the reference stops being used.
+Likewise, the signature of the function uses & to indicate that the type of the parameter s is a reference.
+Note: The opposite of referencing by using & is dereferencing, which is accomplished with the dereference operator, *.
+
+When functions have references as parameters instead of the actual values, we won’t need to return the values in order to give back ownership, because we never had ownership.
+We call the action of creating a reference `borrowing`.
+Just as variables are immutable by default, so are references. We’re not allowed to modify something we have a reference to.
+**** Mutable References
+#+begin_src rust
+fn main() {
+    let mut s = String::from("hello");
+
+    change(&mut s); // passing a mutable reference
+}
+
+fn change(some_string: &mut String) {
+    some_string.push_str(", world");
+}
+#+end_src
+In the example above,
+First we change s to be mut. Then we create a mutable reference with &mut s where we call the change function, and update the function signature to accept a mutable reference with some_string: &mut String. This makes it very clear that the change function will mutate the value it borrows.
+Mutable references have one big restriction: if you have a mutable reference to a value, you can have no other references to that value.
+
+The restriction preventing multiple mutable references to the same data at the same time allows for mutation but in a very controlled fashion.
+The benefit of having this restriction is that Rust can prevent `data races` at compile time. A data race is similar to a race condition and happens when these three behaviors occur:
+
+Two or more pointers access the same data at the same time.
+At least one of the pointers is being used to write to the data.
+There’s no mechanism being used to synchronize access to the data.
+
+We also cannot have a mutable reference while we have an immutable one to the same value.
+However, multiple immutable references are allowed because no one who is just reading the data has the ability to affect anyone else’s reading of the data.
+Note that a reference’s scope starts from where it is introduced and continues through the last time that reference is used. 
+**** Dangling References
+In Rust, the compiler guarantees that references will never be dangling references: if you have a reference to some data, the compiler will ensure that the data will not go out of scope before the reference to the data does.
+#+begin_src rust
+fn dangle() -> &String { // dangle returns a reference to a String
+
+    let s = String::from("hello"); // s is a new String
+
+    &s // we return a reference to the String, s
+} // Here, s goes out of scope, and is dropped. Its memory goes away.
+  // Danger!
+#+end_src
+Because s is created inside dangle, when the code of dangle is finished, s will be deallocated. But we tried to return a reference to it. That means this reference would be pointing to an invalid String. That’s no good! Rust won’t let us do this.
+**** The Rules of References
+Let’s recap what we’ve discussed about references:
+1. At any given time, you can have either one mutable reference or any number of immutable references.
+2. References must always be valid.
