--- a/README.org
+++ b/README.org
@@ -480,3 +480,58 @@ let sq = Rectangle::square(3);
 #+end_src
 **** Multiple impl blocks
 Useful when using generic types and traits.
+** Enums and Pattern Matching
+Enums allow you to define a type by enumerating its possible variants.
+#+begin_src rust
+enum IpAddrKind {
+    V4,
+    V6,
+}
+#+end_src
+To create instances of each of the two variants of IpAddrKind,
+#+begin_src rust
+let four = IpAddrKind::V4;
+let six = IpAddrKind::V6;
+#+end_src
+To have an enum with variants containing data,
+#+begin_src rust
+enum IpAddr {
+    V4(String),
+    V6(String),
+}
+
+let home = IpAddr::V4(String::from("127.0.0.1"));
+
+let loopback = IpAddr::V6(String::from("::1"));
+#+end_src
+The name of each enum variant that we define also becomes a function that constructs an instance of the enum. That is, IpAddr::V4() is a function call that takes a String argument and returns an instance of the IpAddr type. We automatically get this constructor function defined as a result of defining the enum.
+
+Just like with structs, we can create methods for Enums using the `impl` keyword.
+
+*** The `Option` Enum
+#+begin_src rust
+enum Option<T> {
+    None,
+    Some(T),
+}
+#+end_src
+*** Pattern Matching in Rust need to be exhaustive always
+*** _ can be used as catch-all for pattern matching
+*** if...let expressions
+#+begin_src rust
+let config_max = Some(3u8);
+if let Some(max) = config_max {
+    println!("The maximum is configured to be {}", max);
+}
+#+end_src
+In the above example, we don't want to do anything if `config_max` is a `None`.
+
+Another way to handle the `_` case is using `if...let...else`.
+#+begin_src rust
+let mut count = 0;
+if let Coin::Quarter(state) = coin {
+    println!("State quarter from {:?}!", state);
+} else {
+    count += 1;
+}
+#+end_src
